Creator: Fix layout & alignment options (#428)
* Add layout

* Add the classic layout styles

* Try using `__experimentalLayout` to bring back alignments

* Remove top padding

* Add alignment styles to the editor & preview

* Increase thumbnail preview width to show wide & full alignments

* Remove hardcoded CSS in favor of `generate_block_editor_styles_html`

* Update documentation of updateSettings dispatch

* Update documentation for added styles

* Explain `gutenberg_get_layout_style`

--- a/public_html/wp-content/plugins/pattern-creator/src/components/editor/style.scss
+++ b/public_html/wp-content/plugins/pattern-creator/src/components/editor/style.scss
@@ -33,7 +33,6 @@ html {
 		display: block;
 		width: 100%;
 		height: 100%;
-		padding-top: 32px;
 		background-color: $white;
 	}
 }
